# MuseScore

./: .cursorignore  .gitignore  CMakeLists.txt  SetupConfigure.cmake
src/: CMakeLists.txt
src/ai/: CMakeLists.txt  ai.qrc  aimodule.cpp  aimodule.h  aitypes.h  iaiconfiguration.h  iaicontroller.h
src/ai/internal/: aiconfiguration.cpp  aiconfiguration.h  aicontroller.cpp  aicontroller.h  aiuiactions.cpp  aiuiactions.h
src/ai/qml/: AIPreferencesPanel.qml
src/ai/qml/MuseScore/Ai/: AiPanel.qml  qmldir
src/ai/view/: aipanelmodel.cpp  aipanelmodel.h
src/app/: CMakeLists.txt  appfactory.cpp
src/appshell/: CMakeLists.txt  appshell.qrc  appshellmodule.cpp  appshelltypes.h
src/appshell/internal/: applicationuiactions.cpp
src/appshell/qml/: AIPanel.qml  AiPromptPanel.qml
src/appshell/qml/NotationPage/: NotationPage.qml
src/appshell/view/: aipromptpanelmodel.cpp  aipromptpanelmodel.h  appmenumodel.cpp  notationpagemodel.cpp  notationpagemodel.h
src/project/internal/: projectactionscontroller.cpp  projectactionscontroller.h
